# document_RPA

./: .env.example  .gitignore  debug-result-dlx.md  funboost_config.py  nb_log_config.py  pyproject.toml  redmine.md
app/: __init__.py  main.py
app/Spider/WHL/: FL_WHL.py  WHL_SI.py  WHL_VGM.py  __init__.py  base.py  router.py
app/Spider/ZIM/: FL_ZIM.py  ZIM_SI.py  ZIM_VGM.py  base.py  router.py  selectors.py
app/Spider/ZIM/common/: base.py
app/Spider/ZIM/flows/: fl_zim.py
app/Spider/ZIM/tasks/: __init__.py  zim_si.py  zim_vgm.py
app/config/: __init__.py  nacos_config.py  queue_config.py  rabbitmq.py  settings.py  types.py
app/core/browser/: launcher.py  manager.py  options.py  port.py  session_lock.py
app/core/integrations/: captcha.py  notifier.py  oss.py  publisher.py  recorder.py
app/core/logging/: logger.py
app/core/page/: __init__.py  dom.py  http.py  recorder.py  screenshot.py  wait.py
app/core/task/: __init__.py  base_task.py  context.py  dispatcher.py  errors.py  result.py
app/dev/: local_runner.py  template_loader.py
app/queue/: __init__.py  booster.py  consumer.py  message.py  publisher.py  rabbitmq.py
app/spider/: __init__.py
app/spider/WHL/: FL_WHL.py  WHL_SI.py  WHL_VGM.py
app/spider/ZIM/: __init__.py  router.py
doc/: CodeWiki.md  设计需求文档.md
docs/superpowers/plans/: 2026-07-10-distributed-rpa-implementation.md
docs/superpowers/specs/: 2026-07-09-distributed-rpa-design.md  2026-07-13-zim-queue-placeholders-design.md
mssage_list/: msg_VGM.json  msg_demo.json
tests/: test_element_names.py  test_zim_routing.py
(+7 files in other folders)
