[project]
name = "wise-rpa"
version = "0.1.0"
description = "Distributed RPA workers for carrier document automation"
requires-python = "==3.12.12"
dependencies = [
    "DrissionPage",
    "funboost",
    "numpy",
    "opencv-python",
    "python-dotenv",
    "requests",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
