[project]
name = "wise-rpa"
version = "0.1.0"
description = "Distributed RPA workers for carrier document automation"
requires-python = "==3.12.12"
dependencies = [
    "DrissionPage",
    "funboost>=54.8",
    "numpy",
    "opencv-python",
    "pyyaml",
    "python-dotenv",
    "requests",
    "nacos-sdk-python==0.1.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
